Bug #905 School form layout issue

--- a/source/styles/ui/b_autocomplete.scss
+++ b/source/styles/ui/b_autocomplete.scss
@@ -51,7 +51,6 @@
   -ms-box-sizing: border-box;
   box-sizing: border-box;
   border: none;
-  border-bottom: solid 1px #ccc;
 }
 
 .eCombobox_button {
